--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -1,12 +1,13 @@
 .header{
-    position: fixed;
-    right: 50px;
-    top: 50px;
-    .menu{
-        width: 480px;
-        height: 650px;
-        background-color:#eb4646;
-        border-radius: 25px;
-        position: relative;
-    }
+  position: fixed;
+  right: 50px;
+  top: 50px;
+  z-index: 9998;
+  .menu{
+      width: 480px;
+      height: 650px;
+      background-color:#eb4646;
+      border-radius: 25px;
+      position: relative;
+  }
 }
