--- a/src/styles/LandingLeftText.module.scss
+++ b/src/styles/LandingLeftText.module.scss
@@ -1,18 +1,18 @@
 .container {
-    height: 100vh;
-    width: 100vw;
+    height: 40vh;
     display: flex;
+    // background-color: green;
+    overflow: hidden;
   }
   .body{
     display: flex;
     flex-direction: column;
     position: absolute;
     transform-style: preserve-3d;
-    margin-top: 200px;
     margin-left: 25px;
   }
   .textContainer{
-    position: relative;
+    // position: relative;
     cursor: pointer;
     transition: transform 0.4s;
     transform-style: preserve-3d;
