fixed minor bugs

--- a/src/styles/SvgLineDescription.module.scss
+++ b/src/styles/SvgLineDescription.module.scss
@@ -11,7 +11,7 @@
   align-items: flex-start;
   width: 100%;
   max-width: 50vw;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .description, .tagsContainer {
