--- a/src/styles/LandingLeftText.module.scss
+++ b/src/styles/LandingLeftText.module.scss
@@ -1,13 +1,14 @@
 .container {
-    height: 40vh;
-    display: flex;
-    // background-color: green;
+    height: 60vh;
+    width: 100%;
+    // display: flex;
     overflow: hidden;
   }
+
   .body{
     display: flex;
     flex-direction: column;
-    position: absolute;
+    // position: relative;
     transform-style: preserve-3d;
     margin-left: 25px;
   }
