--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -17,14 +17,14 @@
       .el{
           width: 100%;
           height: 100%;
-          background-color: #eb4646;
+          background-color: #ec4e39;
           p{
               margin: 0px;
           }
           &:nth-of-type(2){
               background-color: black;
               p{
-                  color: #eb4646;
+                  color: #ec4e39;
               }
           }
           &:hover{
